<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.listas.EditListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/sp_24"
        android:paddingHorizontal="@dimen/sp_16"
        android:paddingBottom="@dimen/sp_16">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/colorOnSurface"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:contentDescription="@string/descricao_logo"
            app:srcCompat="@drawable/ic_logo"
            app:tint="@null"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_titulo"
            style="@style/TextAppearance.App.Titulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_24"
            android:gravity="center"
            android:text="@string/titulo_editar_lista"
            app:layout_constraintTop_toBottomOf="@id/img_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitulo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_titulo_lista"
            android:layout_marginTop="@dimen/sp_24"
            app:layout_constraintTop_toBottomOf="@id/txt_titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences|textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEscolherImagem"
            style="@style/Widget.App.BotaoSecundario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_16"
            android:text="@string/btn_escolher_imagem"
            app:layout_constraintTop_toBottomOf="@id/tilTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="@dimen/sp_16"
            android:background="@color/cor_cinza_placeholder"
            android:scaleType="centerCrop"
            android:contentDescription="@string/descricao_previa_imagem"
            app:layout_constraintTop_toBottomOf="@id/btnEscolherImagem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSalvar"
            style="@style/Widget.App.BotaoPrimario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_24"
            android:text="@string/btn_salvar"
            app:layout_constraintTop_toBottomOf="@id/imgPreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExcluir"
            style="@style/Widget.App.BotaoSecundario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_16"
            android:text="@string/acao_excluir"
            app:layout_constraintTop_toBottomOf="@id/btnSalvar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
